@@ -224,6 +224,8 @@ Changes since 2.1.4
 119. src/slmath.c: Added frexp and ldexp intrinsic functions.
 120. src/slmath.c: #119 introduced a typo that was preventing
      compilation on systems that lack frexpf.
+121. src/slarray.c: When indexing a scalar as an array, allow the use
+     of multiple indices, e.g., x=2; y=x[0]; z=x[0,0]; w=x[0,0,0];
 
 {{{ Previous Versions
 
